--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,9 @@ Temporary Items
 !.vscode/launch.json
 !.vscode/extensions.json
 
+### IntelliJ IDEA ###
+.idea/*
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -133,6 +136,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
 
 ### Gradle ###
 .gradle
